src/tests/fixtures/errors/mustache-adjacent-close-brace.hbs
<style>.a{color:{{c}}}</style>
